# gsv

./: package-lock.json  package.json
adapters/discord/: package-lock.json  package.json
adapters/discord/src/: index.ts
adapters/test/: package-lock.json  package.json
adapters/test/src/: index.ts
adapters/whatsapp/: package-lock.json  package.json
adapters/whatsapp/src/: gateway-client.ts  index.ts  whatsapp-account.ts
assembler/: Cargo.toml  package.json
assembler/src/: artifact.rs  graph.rs  model.rs  npm.rs  oxc.rs  pipeline.rs  runtime.rs  virtual_fs.rs
assembler/tests/: assembly_artifact.rs  module_graph.rs  npm_and_oxc.rs  pipeline.rs  service.rs
builtin-packages/adapters/: package-lock.json  package.json
builtin-packages/adapters/src/: package.ts  styles.css
builtin-packages/ascii-starfield/: package-lock.json  package.json
builtin-packages/chat/: package-lock.json  package.json
builtin-packages/chat/src/: backend.ts  package.ts  styles.css
builtin-packages/control/: package-lock.json  package.json
builtin-packages/control/src/: styles.css
builtin-packages/devices/: package-lock.json  package.json
builtin-packages/doctor/: package-lock.json  package.json
builtin-packages/files/: package-lock.json  package.json
builtin-packages/files/src/: package.ts
builtin-packages/gsv/: package-lock.json  package.json
builtin-packages/gsv/src/: backend.ts  main.tsx  package.ts  styles.css
builtin-packages/processes/: package-lock.json  package.json
builtin-packages/shell/: package-lock.json  package.json
builtin-packages/shell/src/: history.ts  layout.ts  main.tsx  package.ts  route-context.ts  styles.css  targets.ts  terminal-controller.ts  types.ts
builtin-packages/viewer/: package.json
builtin-packages/viewer/src/: backend.ts  main.tsx  package.ts  styles.css
builtin-packages/wiki/: main.tsx  package-lock.json  package.json  styles.css
builtin-packages/wiki/src/: package.ts
cli/: Cargo.toml  clippy.toml
cli/src/: app.rs  auth_flow.rs  cli.rs  config.rs  connection.rs  deploy.rs  device_service.rs  kernel_client.rs  lib.rs  local_config.rs  logger.rs  main.rs  protocol.rs  transfer.rs  version.rs
cli/src/commands/: adapter.rs  auth.rs  chat.rs  config.rs  infra.rs  mod.rs  packages.rs  proc.rs
cli/src/device/: mod.rs  transfer.rs
cli/src/tools/: copy.rs  mod.rs  search.rs  shell.rs
cli/tests/: tools_test.rs
docs/explanation/: agent-loop.md  architecture.md  process-ipc-and-scheduler.md  security-model.md  target-providers.md
docs/how-to/: configure-agent.md  set-up-cron.md
docs/reference/: cli-commands.md  configuration.md  native-tools.md  r2-storage.md  syscalls.md  websocket-protocol.md  workspace-files.md
docs/tutorials/: getting-started.md  setting-up-a-channel.md
gateway/: .dev.vars.example  package-lock.json  package.json  wrangler.jsonc
gateway/src/: adapter-interface.ts  app-runner.ts  index.ts  oauth-http.ts  public-assets.test.ts  public-assets.ts
gateway/src/codemode/: mcp.ts
gateway/src/downloads/: cli.test.ts  cli.ts  piper-assets.test.ts  piper-assets.ts
gateway/src/fs/: fs.test.ts  gsv-fs.ts  index.ts  mount.ts  process-sources.test.ts  utils.ts
gateway/src/inference/: service.test.ts  service.ts  speech-text.ts  speech.ts  timeout.ts  transcription.ts  workers-ai.test.ts  workers-ai.ts
gateway/src/kernel/: adapter-handlers.test.ts  adapter-handlers.ts  adapter-status.ts  adapter-targets.test.ts  adapter-targets.ts  ai.test.ts  ai.ts  capabilities.test.ts  capabilities.ts  config.test.ts  config.ts  connect.test.ts  connect.ts  context.ts  devices.test.ts  devices.ts  do.ts  (+24 more)
ripgit/: Cargo.toml  package-lock.json  package.json
ripgit/src/: hyperspace.rs  lib.rs
scripts/: build-cloudflare-bundles.sh  version.mjs
shared/app-link/: package.json
shared/package/: package.json
shared/protocol/: package.json
skills/browser-shell/: SKILL.md
skills/gsv-command-surface/: SKILL.md
skills/gsv-context-and-skills/: SKILL.md
skills/gsv-package-development/: SKILL.md
skills/gsv-package-review/: SKILL.md
skills/gsv-process-coordination/: SKILL.md
skills/gsv-process-identity/: SKILL.md
skills/gsv-system-operations/: SKILL.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: gsv-service-worker.js
web/src/: app-runtime.ts  apps-runtime.ts  apps.ts  browser-runtime-fs.ts  browser-target-commands.ts  browser-target-fs.ts  browser-target-shell.ts  browser-target.ts  gateway-client.ts  host-bridge.ts  launcher.ts  local-tts-assets.ts  local-tts-worker.ts  local-tts.ts  main.ts  notifications-panel.ts  onboarding-service.ts  onnxruntime-web-cdn.ts  package-apps.ts  presence.ts  preview-window.ts  session-ui.ts  shell-template.ts  styles.css  window-manager.ts
(+224 files in other folders)
