[package]
name = "gsv"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "io-util",
    "process",
    "signal",
    "fs",
] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4.2"
chrono = "0.4"
dirs = "5"
glob = "0.3"
walkdir = "2"
async-trait = "0.1"
toml = "0.8"
qrcode = "0.14"
cliclack = "0.3.8"
whoami = "1"

# TLS backends - use native-tls by default (respects system certs)
# CI builds for Linux use rustls feature to avoid OpenSSL dependency
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
sha2 = "0.10"
base64 = "0.22"
blake3 = "1.5"
mime_guess = "2.0"
infer = "0.16"
flate2 = "1.0"
tar = "0.4"
json5 = "0.4"
rpassword = "7"
libc = "0.2"

# Only needed when rustls feature is enabled
rustls_crate = { package = "rustls", version = "0.23", default-features = false, features = ["ring", "std"], optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
default = ["native-tls"]

# Use native-tls (macOS: Security.framework, Windows: SChannel, Linux: OpenSSL)
# This respects system certificate stores (important for corporate proxies/VPNs)
native-tls = [
    "tokio-tungstenite/native-tls",
    "reqwest/native-tls",
]

# Use rustls with bundled Mozilla roots (no system dependencies)
# Good for static Linux builds but ignores system cert store
rustls = [
    "tokio-tungstenite/rustls-tls-webpki-roots", 
    "reqwest/rustls-tls",
    "rustls_crate",
]

[lints.clippy]
# Prevent panic-prone patterns in non-test code.
string_slice = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

# Prevent silent failure paths.
let_underscore_future = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Catch common async and concurrency mistakes.
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"

# Keep unsafe/memory escape hatches explicit.
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Flag suspicious numeric behavior.
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"

# Low-noise guardrails for avoidable footguns.
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Suppressions should be intentional and documented.
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
