[package]
name = "ripgit"
version = "0.2.0"
edition = "2021"
authors = ["Steve James <sjames@cloudflare.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7" }
worker-macros = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
base64 = "0.22"
json5 = "0.4"
xpatch = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
sha1_smol = "1"
similar = "2"
js-sys = "0.3"
oxc_allocator = "0.123.0"
oxc_ast = "0.123.0"
oxc_parser = "0.123.0"
oxc_span = "0.123.0"
